--- a/natural_deduction_and_arrow.html
+++ b/natural_deduction_and_arrow.html
@@ -26,7 +26,8 @@
 <script>
 MathJax = {
   tex: {
-    inlineMath: [['$', '$'], ['\\(', '\\)']]
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+  
   }
 };
 </script>
@@ -79,8 +80,6 @@ MathJax = {
   <p>One is called the <em>introduction rule</em> and the other is called the <em>elimination rule</em>.</p>
   <p>For conjunction $\wedge$, these are designated respectively as $I\wedge$ and $E\wedge$. For arrow, they are designated as $I\rightarrow$ and $E\rightarrow$. This pattern persists: ‘I’ is for ‘Introduction’ and ‘E’ is for ‘Elimination’.</p>
   </section>
-
-
 
   <!-- Slide -->
   <section>
